# actix-starter

./: .env  .gitignore  Cargo.toml  Secrets.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_extensions.rs  m20230902_024725_create_users.rs  m20230902_024928_create_permissions.rs  m20230902_025106_create_roles.rs  m20230902_025217_create_permission_user.rs  m20230902_025247_create_permission_role.rs  m20230902_025255_create_role_user.rs  m20230902_025309_create_tokens.rs  m20231216_092530_user_initial_seeder.rs
src/: api.rs  app.rs  lib.rs  main.rs  route.rs
src/common/: base58.rs  hash.rs  log.rs
src/controllers/: auth.rs  permission.rs  role.rs  user.rs
src/dao/: auth.rs  permission.rs  role.rs  user.rs
src/middlewares/: auth.rs
src/models/: mod.rs
src/models/postgres/: permission_role.rs  permission_user.rs  permissions.rs  role_user.rs  roles.rs  tokens.rs  users.rs
src/requests/: auth.rs  mod.rs  permission.rs  role.rs  user.rs
src/responses/: auth.rs  mod.rs  permission.rs  rest.rs  role.rs  user.rs
src/services/: auth.rs  permission.rs  role.rs  user.rs
