[package]
name = "learning-management-system"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-query/backend-sqlite"]
postgres = ["sea-orm/sqlx-postgres", "sea-query/backend-postgres"]
shuttle = ["dep:shuttle-actix-web", "dep:shuttle-runtime", "dep:shuttle-secrets"]

[lib]
name = "learning_management_system"
path = "src/lib.rs"

[[bin]]
name = "learning_management_system"
path = "src/main.rs"

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.5"
actix-web = "4.4.0"
bs58 = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
sea-orm = { version = "0.12.2", features = ["runtime-actix-native-tls"] }
sea-query = { version = "0.30.4", features = ["chrono", "rust_decimal", "serde_json", "time", "uuid"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
shuttle-actix-web = { version = "0.35.0", optional = true }
shuttle-runtime = { version = "0.35.0", optional = true }
shuttle-secrets = { version = "0.35.1", optional = true }
utoipa = { version = "4.0.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }

[dev-dependencies]
cargo-watch = "8.4.1"
